--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,6 @@
     "/js/app.js": "/js/app.js",
     "/js/auth.js": "/js/auth.js",
     "/css/auth.css": "/css/auth.css",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/css/frontend.css": "/css/frontend.css"
 }
