--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
+        "barryvdh/laravel-ide-helper": "^2.6",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "friendsofphp/php-cs-fixer": "^2.14",
@@ -49,11 +50,11 @@
             "dont-discover": []
         }
     },
-    "repositories": [ 
+    "repositories": [
         {
-            "type": "composer", 
-            "url": "https://satis.spatie.be/" 
-        } 
+            "type": "composer",
+            "url": "https://satis.spatie.be/"
+        }
     ],
     "autoload": {
         "psr-4": {
@@ -80,6 +81,12 @@
         ],
         "format": [
             "vendor/bin/php-cs-fixer fix"
+        ],
+        "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "php artisan ide-helper:generate",
+            "php artisan ide-helper:meta",
+            "php artisan telescope:publish"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
