--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "spatie/laravel-backup": "^6.1",
         "spatie/laravel-permission": "^2.33",
         "spatie/seeders": "^5.1",
+        "thepinecode/blade-filters": "^0.3.2",
         "watson/active": "^3.0"
     },
     "require-dev": {
